# aie-kareva-maria

./: .gitignore  README.md
homeworks/HW01/: HW01_Карьева.ipynb
homeworks/HW02/: HW02.ipynb
homeworks/HW03/eda-cli/: README.md
homeworks/HW04/eda-cli/: README.md  pyproject.toml
homeworks/HW04/eda-cli/src/eda_cli/: api.py
homeworks/HW04/eda-cli/tests/: test_core.py
homeworks/HW05/: HW05.ipynb
homeworks/HW06/: HW06.ipynb  report.md
homeworks/HW06/artifacts/: best_model_meta.json  metrics_test.json  search_summaries.json
homeworks/HW07/: HW07.ipynb  report.md
homeworks/HW07/artifacts/: best_configs.json  metrics_summary.json
homeworks/HW08-09/: HW08-09.ipynb  report.md
homeworks/HW08-09/artifacts/: best_config.json  runs.csv
homeworks/HW10-11/: report.md
homeworks/HW10-11/artifacts/: best_classifier_config.json  runs.csv
homeworks/HW12/: HW12.ipynb  report.md
homeworks/HW12/artifacts/: best_gru.pt  best_gru_config.json  runs.csv
homeworks/HW13/: HW13.ipynb  report.md
homeworks/HW13/artifacts/: sample_predictions.csv  tokenization_examples.txt
homeworks/HW14/: HW14.ipynb  report.md
homeworks/HW14/artifacts/: rag_examples.csv  retrieval_before_after_update.csv  retrieval_eval.csv
project/: .dockerignore  Dockerfile  README.md  report.md  requirements.txt  self-checklist.md
project/artifacts/: feature_names.pkl  metrics.pkl  model.pkl
project/configs/: .env.example  config.json
project/data/: flights.csv
project/notebooks/: exp01_eda.ipynb
project/src/: eda_and_train.py
project/tests/: test_api.py  test_data_loading.py
(+10 files in other folders)
